# chiron

./: .gitignore  .runmd  Cargo.toml  README.md  demo.runmd
design/: anatomy.md  devbox.runmd
design/azure/: .runmd
design/dev_box/: .runmd  demo.runmd  portal.js
design/devbox/: .runmd  demo.runmd
design/portal/: .runmd  portal.js
elm/portal/: elm.json  index.html
elm/portal/src/: Editor.elm  Instructions.elm  Layout.elm  Main.elm  Markdown.elm  Settings.elm
examples/: readme.md
examples/byo_labs/: readme.md
examples/byo_labs/design/portal/: .runmd
examples/byo_labs/extensions/test_extension/: .runmd
hack/cloud-init/: common.yml  exit.yml  install-bondcompiler.yml  install-docker.yml  install-gcm.yml  install-golang.yml  install-kind.yml  install-minikube.yml  install-overlaybd-dadi.yml  install-rustlang.yml
hack/rocks_db_openapi/: Cargo.toml
hack/rocks_db_openapi/lib/elm/dash/: index.html
hack/rocks_db_openapi/lib/elm/dash/src/: Main.elm
hack/rocks_db_openapi/src/: main.rs
hack/rocks_db_openapi/src/models/: config.rs  metadata.rs  mod.rs
lib/cloud-init/: common.yml  install-gcm.yml  install-gitlab.yml  install-golang.yml  install-helm.yml  install-overlaybd.yml
lib/cloud_init/: enter-azure.yml  install-accelerated-container-image.yml  install-azcli.yml  install-bondcompiler.yml  install-cfssl.yml  install-dotnet-sdk.yml  install-git-server.yml  install-kind.yml  install-mkcert.yml  install-overlaybd-dadi.yml  make-vm.sh
lib/elm/catalog/src/: Catalog.elm  Item.elm  Layout.elm  Main.elm
lib/elm/portal/: elm.js  elm.json  elm.min.js  index.html  portal.js
lib/elm/portal/src/: Editor.elm  Instructions.elm  Layout.elm  Main.elm  Markdown.elm  Settings.elm
lib/sh/: acr-login.sh  fix-azcli-macos.sh  fix-azcli.sh  fix-jq-macos.sh  fix-jq.sh  fix-pip-azure-cli.sh  make-vm.sh
rs/: .runmd  Cargo.toml  demo.runmd
rs/src/: helpers.rs  host.rs  main.rs
rs/src/tooling/: az_cli.rs  cloud_init.rs  mod.rs
rs/src/tooling/cloud_init/: cloud_config.rs  mod.rs
src/: check.rs  config.rs  design.rs  helpers.rs  host.rs  install.rs  lab.rs  lib.rs  main.rs  run.rs
src/acr/: mod.rs
src/cloud_init/: cloud_config.rs  install.rs  installer.rs  make_mime.rs  mod.rs  read_mime.rs  user_data.rs
src/elm/: make.rs  mod.rs
src/tooling/: cloud_init.rs  mod.rs
