[package]
name = "chiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
walkdir = "2"
phf = { version = "0.10", features = ["macros"] }

lifec = { git = "https://github.com/juliusl/lifec.git", branch = "main" }
lifec_poem = { git = "https://github.com/juliusl/lifec_poem.git", branch = "main" }
lifec_hyper= { git = "https://github.com/juliusl/lifec_hyper.git", branch = "main" }
knot = { git = "https://github.com/juliusl/knot.git", branch="main" }
shinsu = { git = "https://github.com/juliusl/shinsu.git", branch="pr/fork" }
# Cloud-Init Make-Mime 
base64 = "0.13.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"
imgui = "0.8.2"
logos = "0.12.1"
poem = { version = "1.3.32", features = ["server", "static-files", "embed", "websocket"] }
tokio = { version = "1.19.2", features = [ "rt-multi-thread", "macros" ] }
rust-embed = { version = "6.4.0", features = ["compression"] }
futures-util = "0.3.21"
serde_json = "1.0.82"
tracing-subscriber =  { version = "0.3", features = [ "env-filter" ] }
