[package]
name = "chiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
walkdir = "2"
phf = { version = "0.10", features = ["macros"] }

lifec = { path = "../lifec" } # { git = "https://github.com/juliusl/lifec.git", branch = "pr/v2_api" }
lifec_poem = { git = "https://github.com/juliusl/lifec_poem.git", branch = "pr/v2_api" }
lifec_hyper = { git = "https://github.com/juliusl/lifec_hyper.git", branch = "pr/v2_api" }
lifec_registry = { git = "https://github.com/juliusl/lifec_registry.git", branch = "pr/v2_api" }
lifec_shell = { git = "https://github.com/juliusl/lifec_shell.git", branch = "pr/v2_api" }
shinsu = { git = "https://github.com/juliusl/shinsu.git", branch="pr/fork" }

# TODO: This can probably turn into a standalone repo
# Cloud-Init Make-Mime 
base64 = "0.13.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"
imgui = "0.8.2"
logos = "0.12.1"
poem = { version = "1.3.32", features = ["server", "static-files", "embed", "websocket"] }
tokio = { version = "1.19.2", features = [ "rt-multi-thread", "macros" ] }
rust-embed = { version = "6.4.0", features = ["compression"] }
futures-util = "0.3.21"
serde_json = "1.0.82"
tracing-subscriber =  { version = "0.3", features = [ "env-filter" ] }
tracing = "0.1.35"
clap = { version = "3.2.16", features = [ "derive" ] }
tinytemplate = "1.2.1"
