[package]
name = "chiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
walkdir = "2"
phf = { version = "0.10", features = ["macros"] }

# Cloud-Init Make-Mime 
base64 = "0.13.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"