[package]
name = "chiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
walkdir = "2"
phf = { version = "0.10", features = ["macros"] }

lifec = { git = "https://github.com/juliusl/lifec.git", branch = "pr/serialization" }
# Cloud-Init Make-Mime 
base64 = "0.13.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"
specs = "0.17.0"
imgui = "0.8.2"
logos = "0.12.1"
