[package]
name = "hello2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.18.0"
poem = { version = "1.3.14", features = ["static-files", "rustls"] }
poem-openapi = { version = "1.3.14", features = ["swagger-ui"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136" }
serde_json = "1.0"
